--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,28 +90,10 @@ jobs:
           dotnet nuget add source /mnt/ramdisk/packages -n local
           bash temp/process-sln.sh
       - run: dotnet test src/mathtone-magic.sln --configuration Release
-  pack-core:
-    docker:
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
-    working_directory: /mnt/ramdisk
-    steps:
-      - attach_workspace:
-          at: .
-      - checkout
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Logging/Mathtone.Sdk.Logging.csproj
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
-      - pack-proj:
-          proj: src/sdk/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
       - persist_to_workspace:
           root: .
           paths:
-            - src
             - packages
-
   publish-artifactory:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
@@ -124,7 +106,7 @@ jobs:
       - run:
          name: Publish to Atifactory
          command: |
-            dotnet nuget push root/ramdisk/packages/*.nupkg --source Mathtone-Dev
+            dotnet nuget push packages/*.nupkg --source Mathtone-Dev
 
   publish-nuget:
     docker:
