--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,10 @@ commands:
           ver=${branch/"release/"/""}
           suffix=${ver#*-}
           build=${ver%-*}
+          sfxtag=/"bbbeeekkk/"
           echo "export PKG_VER=$build" >> $BASH_ENV
           echo "export PKG_SFX=$suffix" >> $BASH_ENV
+          echo "export PKG_SFX_TAG=sfxtag" >> $BASH_ENV
 jobs:
   get-code:
     docker:
