--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ commands:
           ver=${branch/"release/"/""}
           suffix=${ver#*-}
           build=${ver%-*}
-          sfxtag=$(( "$suffix" == "" ? "AAAAA"" : "BBBBB" )) ;
+          sfxtag=$(( "$suffix" == "" ? "AAAAA" : "BBBBB" )) ;
           echo "export PKG_VER=$build" >> $BASH_ENV
           echo "export PKG_SFX=$suffix" >> $BASH_ENV
           echo "export PKG_SFX_TAG=$sfxtag" >> $BASH_ENV
