--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ commands:
           build=${ver%-*}
           
 
-          [[ $suffix == "" ]]  & sfxtag="YES" || sfxtag="NO"
+          [[ $suffix == "" ]]  & sfxtag="--version-suffix $suffix" || sfxtag=""
           echo "export PKG_VER=$build" >> $BASH_ENV
           echo "export PKG_SFX=$suffix" >> $BASH_ENV
           echo "export PKG_SFX_TAG=$sfxtag" >> $BASH_ENV
