--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,8 @@ commands:
           ver=${branch/"release/"/""}
           suffix=${ver#*-}
           build=${ver%-*}
-          
-
-          [[ $suffix == "" ]]  & sfxtag="" || sfxtag="--version-suffix $suffix"
+          [[ $suffix == "" ]] & sfxtag=/"/" || sfxtag=/"--version-suffix $suffix/"
+          echo GOT SUFFIX: $sfxtag
           echo "export PKG_VER=$build" >> $BASH_ENV
           echo "export PKG_SFX=$suffix" >> $BASH_ENV
           echo "export PKG_SFX_TAG=$sfxtag" >> $BASH_ENV
