--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ commands:
           ver=${branch/"release/"/""}
           suffix=${ver#*-}
           build=${ver%-*}
-          [[ $suffix == "" ]] & sfxtag=/"/" || sfxtag=/"--version-suffix $suffix/"
+          [[ $suffix == "" ]] & sfxtag=$"" || sfxtag=$"--version-suffix {$suffix}"
           echo SUFFIX: $suffix
           echo GOT SUFFIX: $sfxtag
           echo "export PKG_VER=$build" >> $BASH_ENV
