--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ commands:
             
           else
             echo SUFFIX FOUND
+            echo "export PKG_SFX_TAG=TEST" >> $BASH_ENV
             echo "export PKG_SFX_TAG=${--version-suffix $suffix}" >> $BASH_ENV
           fi
           
