--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ commands:
             vertag=NOPE
           else
             echo SUFFIX FOUND
-            vertag="--version-suffix $suffix"
+            vertag=$"--version-suffix {suffix}"
             echo "export PKG_SFX_TAG=$vertag" >> $BASH_ENV
           fi
           
@@ -66,7 +66,7 @@ jobs:
           at: .
       - get-version
       - run: |
-          echo SUFFIX - $PKG_SFX_TAG $PKG_SFX
+          echo SUFFIX - $PKG_SFX_TAG
           dotnet restore src/mathtone-magic.sln
           dotnet nuget remove source nuget.org
           dotnet nuget add source /mnt/ramdisk/packages -n local
