--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,7 @@ commands:
           else
             echo $"SUFFIX FOUND- {$suffix}"
             vertag=$"--version-suffix $suffix"
+             echo $"VERSION TAG- $vertag"
             echo "export PKG_SFX_TAG=$vertag" >> $BASH_ENV
           fi
           
