--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
     working_directory: /mnt/ramdisk
     steps:
       - checkout
-      - run: get-version
+      - get-version
       - run: echo $PKG_SFX_TAG
       - run: |
           mkdir temp
