--- a/tools/build-util/appsettings.json
+++ b/tools/build-util/appsettings.json
@@ -7,7 +7,8 @@
 			"Mathtone.Sdk.Utilities",
 			"Mathtone.Sdk.Data",
 			"Mathtone.Sdk.Data.Sql",
-			"Mathtone.Sdk.Data.Npgsql"
+			"Mathtone.Sdk.Data.Npgsql",
+			"Mathtone.Sdk.Testing.Xunit"
 		],
 		"PackageDirectory": "packages",
 		"Verbosity": "Quiet"
