--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,9 @@ version: 2.1
 commands:
   get-version:
     steps:
-      - run: |
+      - run:
+         name: Getting Package Version
+         command: |
           branch=$CIRCLE_BRANCH
           ver=${branch/"release/"/""}
           suffix=${ver#*-}
@@ -29,20 +31,11 @@ jobs:
     working_directory: /mnt/ramdisk
     steps:
       - checkout
-      #- get-version
-      #- run: echo $PKG_SFX_TAG
-      #- run: |
-      #    mkdir temp
-      #    mkdir packages
-      #- run: dotnet build tools/build-util/build-util.csproj --output temp
-      #- run: dotnet temp/build-util.dll src/mathtone-magic.sln
       - persist_to_workspace:
           root: .
           paths:
             - src
             - tools
-            #- packages
-            #- temp/process-sln.sh
   run-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
@@ -102,7 +95,7 @@ jobs:
           name: "Add Artifactory"
           command: dotnet nuget add source https://mathtone.jfrog.io/artifactory/api/nuget/v3/mathtone-dev --name Mathtone-Dev --username ${ARTIFACTORY_USER} --password ${ARTIFACTORY_PWD} --store-password-in-clear-text
       - run:
-         name: Publish to Atifactory
+         name: Publish to Artifactory
          command: |
             dotnet nuget push packages/*.nupkg --source Mathtone-Dev
 
