--- a/src/sdk/Mathtone.Sdk.Logging.Console/Mathtone.Sdk.Logging.Console.csproj
+++ b/src/sdk/Mathtone.Sdk.Logging.Console/Mathtone.Sdk.Logging.Console.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Description>ILogger implementation for the System console.</Description>
   </PropertyGroup>
 
   <ItemGroup>
