--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,14 +10,14 @@ commands:
           suffix=${ver#*-}
           build=${ver%-*}
           vertag=""
-          if  [[ $suffix == "" ]]; then
+          if  [ $suffix == "" ] || [ $suffix == $build ]; then
             echo NO SUFFIX
             echo "export PKG_SFX_TAG=""" >> $BASH_ENV
             vertag=NOPE
           else
             echo $"SUFFIX FOUND- {$suffix}"
             vertag=$"--version-suffix $suffix"
-             echo $"VERSION TAG- $vertag"
+            echo $"VERSION TAG- $vertag"
             echo "export PKG_SFX_TAG='$vertag'" >> $BASH_ENV
           fi
           
