--- a/src/sdk/Mathtone.Sdk.Logging.Console/Mathtone.Sdk.Logging.Console.csproj
+++ b/src/sdk/Mathtone.Sdk.Logging.Console/Mathtone.Sdk.Logging.Console.csproj
@@ -5,7 +5,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Description>ILogger implementation for the System console.</Description>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\source\repos\mathtone-magic\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Mathtone.Sdk.Logging\Mathtone.Sdk.Logging.csproj" />
