--- a/src/sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
+++ b/src/sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
@@ -5,6 +5,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Description>Utility components.</Description>
+
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\source\repos\mathtone-magic\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 
 </Project>
