--- a/src/sdk/Mathtone.Sdk.Testing/Mathtone.Sdk.Testing.csproj
+++ b/src/sdk/Mathtone.Sdk.Testing/Mathtone.Sdk.Testing.csproj
@@ -5,6 +5,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Description>Testing utilities &amp; components.</Description>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="..\..\..\..\source\repos\mathtone-magic\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
 
 </Project>
