--- a/src/sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
+++ b/src/sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\..\source\repos\mathtone-magic\LICENSE.txt">
+    <None Include="..\LICENSE.txt">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
