--- a/src/sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
+++ b/src/sdk/Mathtone.Sdk.Utilities/Mathtone.Sdk.Utilities.csproj
@@ -5,15 +5,13 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <Description>Utility components.</Description>
-
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\LICENSE.txt">
-      <Pack>True</Pack>
+    <None Include="..\..\..\LICENSE.txt" Link="LICENSE.txt">
       <PackagePath>\</PackagePath>
+      <Pack>True</Pack>
     </None>
   </ItemGroup>
 
