--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,7 @@ jobs:
       - persist_to_workspace:
           root: .
           paths:
+            - LICENCE.txt
             - src
             - tools
   run-tests:
