--- a/src/sdk/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
+++ b/src/sdk/Mathtone.Sdk.Data.Sql/Mathtone.Sdk.Data.Sql.csproj
@@ -6,13 +6,12 @@
     <Nullable>enable</Nullable>
     <Description>Fluent simple database access for SQL Server.</Description>
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\..\source\repos\mathtone-magic\LICENSE.txt">
-      <Pack>True</Pack>
+    <None Include="..\..\..\LICENSE.txt" Link="LICENSE.txt">
       <PackagePath>\</PackagePath>
+      <Pack>True</Pack>
     </None>
   </ItemGroup>
 
