--- a/src/sdk/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
+++ b/src/sdk/Mathtone.Sdk.Data/Mathtone.Sdk.Data.csproj
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="..\..\..\..\source\repos\mathtone-magic\LICENSE.txt">
-      <Pack>True</Pack>
+    <None Include="..\..\..\LICENSE.txt" Link="LICENSE.txt">
       <PackagePath>\</PackagePath>
+      <Pack>True</Pack>
     </None>
   </ItemGroup>
 
