--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,8 +42,6 @@ jobs:
   run-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:6.0
-      - image: cimg/base:2021.04
-      
       - image: postgres
         environment:
           POSTGRES_USER: postgres
@@ -57,8 +55,7 @@ jobs:
       - attach_workspace:
           at: .
       - run: dotnet test src/mathtone-magic.sln --configuration Release
-      #- run: setup -nqP unzip
-      - sonarcloud/scan
+      #- sonarcloud/scan
 
   shatter-test-projects:
     docker:
