--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -102,6 +102,7 @@ jobs:
       - run:
          name: Publish to Artifactory
          command: |
+            ls -l packages
             dotnet nuget push packages/*.nupkg --source Mathtone-Dev
 
   publish-nuget:
@@ -136,6 +137,7 @@ workflows:
                   - /release.*/
           context: MATHTONE_DEV
           requires:
+            - run-tests
             - shatter-test-projects
       - approve-ship:
           filters:
