--- a/src/sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
+++ b/src/sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
@@ -8,11 +8,12 @@
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
 
-  <ItemGroup>
-    <None Include="..\..\..\LICENSE.txt">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
+   <ItemGroup>
+	  <None Include="..\..\..\LICENSE.txt" Link="LICENSE.txt">
+		 <PackagePath>\</PackagePath>
+		 <Pack>True</Pack>
+	  </None>
+   </ItemGroup>
+
 
 </Project>
