Added Services sdk.

--- a/tools/build-util/appsettings.json
+++ b/tools/build-util/appsettings.json
@@ -1,6 +1,7 @@
 {
 	"Settings": {
 		"PackageProjects": [
+			"Mathtone.Sdk.Services",
 			"Mathtone.Sdk.Common",
 			"Mathtone.Sdk.Logging",
 			"Mathtone.Sdk.Logging.Console",
