--- a/src/sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
+++ b/src/sdk/Mathtone.Sdk.Common/Mathtone.Sdk.Common.csproj
@@ -15,5 +15,9 @@
 	  </None>
    </ItemGroup>
 
+   <ItemGroup>
+     <ProjectReference Include="..\Mathtone.Sdk.Services\Mathtone.Sdk.Services.csproj" />
+   </ItemGroup>
+
 
 </Project>
