Added Graphs sdk.

--- a/tools/build-util/appsettings.json
+++ b/tools/build-util/appsettings.json
@@ -10,7 +10,8 @@
 			"Mathtone.Sdk.Data.Sql",
 			"Mathtone.Sdk.Data.Npgsql",
 			"Mathtone.Sdk.Testing",
-			"Mathtone.Sdk.Testing.Xunit"
+			"Mathtone.Sdk.Testing.Xunit",
+			"Mathtone.Sdk.Graphs"
 		],
 		"PackageDirectory": "packages",
 		"Verbosity": "Quiet"
