--- a/tests/Mathtone.Sdk.Graphs.Tests/Mathtone.Sdk.Graphs.Tests.csproj
+++ b/tests/Mathtone.Sdk.Graphs.Tests/Mathtone.Sdk.Graphs.Tests.csproj
@@ -9,17 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Queries\TestQuery.sql" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <EmbeddedResource Include="Queries\TestQuery.sql" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
-    <PackageReference Include="system.linq.async" Version="6.0.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -32,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\sdk\Mathtone.Sdk.Data.Sql\Mathtone.Sdk.Data.Sql.csproj" />
-    <ProjectReference Include="..\..\tests\Mathtone.Sdk.Data.Tests\Mathtone.Sdk.Data.Tests.csproj" />
+    <ProjectReference Include="..\..\src\sdk\Mathtone.Sdk.Graphs\Mathtone.Sdk.Graphs.csproj" />
   </ItemGroup>
+
 </Project>
