Added Time and Rng.

--- a/tools/build-util/appsettings.json
+++ b/tools/build-util/appsettings.json
@@ -11,7 +11,9 @@
 			"Mathtone.Sdk.Data.Npgsql",
 			"Mathtone.Sdk.Testing",
 			"Mathtone.Sdk.Testing.Xunit",
-			"Mathtone.Sdk.Graphs"
+			"Mathtone.Sdk.Graphs",
+			"Mathtone.Sdk.Rng",
+			"Mathtone.Sdk.Time"
 		],
 		"PackageDirectory": "packages",
 		"Verbosity": "Quiet"
