fixed branch name.  added features for random.

--- a/src/sdk/Mathtone.Sdk.Rng/Mathtone.Sdk.Rng.csproj
+++ b/src/sdk/Mathtone.Sdk.Rng/Mathtone.Sdk.Rng.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Mathtone.Sdk.Common\Mathtone.Sdk.Common.csproj" />
+  </ItemGroup>
+
 </Project>
