--- a/src/sdkX/Mathtone.Sdk.Services/Mathtone.Sdk.Services.csproj
+++ b/src/sdkX/Mathtone.Sdk.Services/Mathtone.Sdk.Services.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <Compile Remove="Time\**" />
+    <EmbeddedResource Remove="Time\**" />
+    <None Remove="Time\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Time\" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
   </ItemGroup>
 
 </Project>
