--- a/src/sdk/Directory.Build.props
+++ b/src/sdk/Directory.Build.props
@@ -7,5 +7,7 @@
 	<RepositoryUrl>https://github.com/mathtone/mathtone-magic</RepositoryUrl>
 	<VersionPrefix>1.0.0</VersionPrefix>
 	<IsPackable>true</IsPackable>
+	<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	<PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
  </PropertyGroup>
 </Project>
