Added Repository patterns.

--- a/tools/build-util/appsettings.json
+++ b/tools/build-util/appsettings.json
@@ -13,7 +13,8 @@
 			"Mathtone.Sdk.Testing.Xunit",
 			"Mathtone.Sdk.Graphs",
 			"Mathtone.Sdk.Rng",
-			"Mathtone.Sdk.Time"
+			"Mathtone.Sdk.Time",
+			"Mathtone.Sdk.Patterns"
 		],
 		"PackageDirectory": "packages",
 		"Verbosity": "Quiet"
