--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,6 +29,7 @@ jobs:
   get-code:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
     working_directory: /mnt/ramdisk
     steps:
       - checkout
@@ -42,6 +43,7 @@ jobs:
   integration-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: postgres
         environment:
           POSTGRES_USER: postgres
@@ -60,6 +62,7 @@ jobs:
   disintegration-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: postgres
         environment:
           POSTGRES_USER: postgres
@@ -94,6 +97,7 @@ jobs:
   publish-artifactory:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - attach_workspace:
           at: .
@@ -109,6 +113,7 @@ jobs:
   publish-nuget:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
+      - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - attach_workspace:
           at: .
