--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
   get-code:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
+      #- image: mcr.microsoft.com/dotnet/sdk:6.0
     working_directory: /mnt/ramdisk
     steps:
       - checkout
@@ -43,7 +43,7 @@ jobs:
   integration-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
+      #- image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: postgres
         environment:
           POSTGRES_USER: postgres
@@ -62,7 +62,7 @@ jobs:
   disintegration-tests:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
+      #- image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: postgres
         environment:
           POSTGRES_USER: postgres
@@ -97,7 +97,7 @@ jobs:
   publish-artifactory:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
+      #- image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - attach_workspace:
           at: .
@@ -113,7 +113,7 @@ jobs:
   publish-nuget:
     docker:
       - image: mcr.microsoft.com/dotnet/sdk:7.0
-      - image: mcr.microsoft.com/dotnet/sdk:6.0
+      #- image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - attach_workspace:
           at: .
