--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,7 @@ orbs:
 jobs:
   get-code:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:7.0
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     working_directory: /mnt/ramdisk
     steps:
@@ -42,7 +42,7 @@ jobs:
       
   integration-tests:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:7.0
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: postgres
         environment:
@@ -61,7 +61,7 @@ jobs:
 
   disintegration-tests:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:7.0
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: postgres
         environment:
@@ -96,7 +96,7 @@ jobs:
             - packages
   publish-artifactory:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:7.0
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - attach_workspace:
@@ -112,7 +112,7 @@ jobs:
 
   publish-nuget:
     docker:
-      - image: mcr.microsoft.com/dotnet/sdk:7.0
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - attach_workspace:
