--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,7 @@ orbs:
 jobs:
   get-code:
     docker:
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     working_directory: /mnt/ramdisk
     steps:
@@ -41,6 +42,7 @@ jobs:
       
   integration-tests:
     docker:
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: postgres
         environment:
@@ -59,6 +61,7 @@ jobs:
 
   disintegration-tests:
     docker:
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
       - image: postgres
         environment:
@@ -93,6 +96,7 @@ jobs:
             - packages
   publish-artifactory:
     docker:
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - attach_workspace:
@@ -108,6 +112,7 @@ jobs:
 
   publish-nuget:
     docker:
+      #- image: mcr.microsoft.com/dotnet/sdk:7.0
       - image: mcr.microsoft.com/dotnet/sdk:6.0
     steps:
       - attach_workspace:
