Added data dictionary repo.

--- a/src/sdk/Mathtone.Sdk.Patterns/Mathtone.Sdk.Patterns.csproj
+++ b/src/sdk/Mathtone.Sdk.Patterns/Mathtone.Sdk.Patterns.csproj
@@ -5,4 +5,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Mathtone.Sdk.Common\Mathtone.Sdk.Common.csproj" />
+  </ItemGroup>
+
 </Project>
